--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -1,4 +1,4 @@
-<div class="info-pages faq">
+<div class="info-pages faq col">
   <h4>FAQ</h4>
   <div id="accordion" role="tablist" aria-multiselectable="true">
     <% @questions.each_with_index do |question, index|%>
