--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -34,13 +34,55 @@
 
 <div class="short-info">
   <div class="mdl-grid short-info-row-1">
-    <div class="mdl-cell mdl-cell--4-col">4</div>
-    <div class="mdl-cell mdl-cell--4-col">4</div>
-    <div class="mdl-cell mdl-cell--4-col">4</div>
+    <div class="mdl-cell mdl-cell--4-col info-block">
+      <%= link_to manage_path do %>
+        <div class="info-box">
+          <div class="dojo-icon info-icon"></div>
+          <p>Dojo info</p>
+        </div>
+      <% end %>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col info-block">
+      <%= link_to manage_path do %>
+          <div class="info-box">
+            <div class="dojo-icon info-icon"></div>
+            <p>Dojo info</p>
+          </div>
+      <% end %>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col info-block">
+      <%= link_to manage_path do %>
+          <div class="info-box">
+            <div class="dojo-icon info-icon"></div>
+            <p>Dojo info</p>
+          </div>
+      <% end %>
+    </div>
   </div>
   <div class="mdl-grid short-info-row-2">
-    <div class="mdl-cell mdl-cell--4-col">4</div>
-    <div class="mdl-cell mdl-cell--4-col">4</div>
-    <div class="mdl-cell mdl-cell--4-col">4</div>
+    <div class="mdl-cell mdl-cell--4-col info-block">
+      <%= link_to manage_path do %>
+          <div class="info-box">
+            <div class="dojo-icon info-icon"></div>
+            <p>Dojo info</p>
+          </div>
+      <% end %>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col info-block">
+      <%= link_to manage_path do %>
+          <div class="info-box">
+            <div class="location-icon info-icon"></div>
+            <p>Find us at</p>
+          </div>
+      <% end %>
+    </div>
+    <div class="mdl-cell mdl-cell--4-col info-block">
+      <%= link_to manage_path do %>
+          <div class="info-box">
+            <div class="dojo-icon info-icon"></div>
+            <p>Dojo info</p>
+          </div>
+      <% end %>
+    </div>
   </div>
 </div>
