--- a/app/views/images/new_image.erb
+++ b/app/views/images/new_image.erb
@@ -1,3 +1,4 @@
 <div class="image-form nw-form">
+  <%= render :partial => "layouts/form_header", :locals => { :title => 'New Image' } %>
   <%= render :partial => "form", :locals => { :image => @image } %>
 </div>
