--- a/app/views/photographers/edit.erb
+++ b/app/views/photographers/edit.erb
@@ -1,3 +1,4 @@
 <div class="photographer-form nw-form">
+  <%= render :partial => "layouts/form_header", :locals => { :title => 'Edit Photographer' } %>
   <%= render :partial => "form", :locals => { :photographer => @photographer } %>
 </div>
