--- a/app/views/images/_form.erb
+++ b/app/views/images/_form.erb
@@ -1,52 +1,68 @@
-<%= form_for(image) do |f| %>
-    <div class="for_page" title="<%= image.for_page %>">
-      <i class="material-icons"><%= image.for_page %></i>
-    </div>
-
-    <% url = image.present? && image.url ? image.url : 'http://saveabandonedbabies.org/wp-content/uploads/2015/08/default.png' %>
-    <% image = Image.new unless image.present? %>
-    <div class="preview">
-      <%= image_tag url, {class: "#{controller.action_name}-preview-img"} %>
-    </div>
-
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <%= f.text_field :url, class: 'mdl-textfield__input', id: 'image-url' %>
-      <label class="mdl-textfield__label" for="image-url">Image URL</label>
-    </div>
-
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <%= f.text_field :title, class: 'mdl-textfield__input', id: 'image-title' %>
-      <label class="mdl-textfield__label" for="image-title">Title</label>
-    </div>
-
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <%= f.select(:photographer_id, Photographer.all.collect {|p| [ p.full_name, p.id ] },
-                   {include_blank: "Select a photographer",
-                    selected: image && image.photographer ? image.photographer.id : nil},
-                   { class: 'image-select', id: 'image-photographer' }) %>
-      <label class="mdl-textfield__label" for="image-photographer">Image Owner</label>
-
-      <%= link_to 'Manage Photographer', manage_photographers_path, class: 'manage-photographer mdl-button mdl-js-button mdl-button--raised', target: '_blank' %>
-    </div>
-
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label md-textarea-padding">
-      <%= f.text_area :description, class: 'mdl-textfield__input', rows: "3", id:"image-description" %>
-      <label class="mdl-textfield__label" for="image-description">Description</label>
-    </div>
-
-    <% if image.created_at.present? %>
-      <div class="dates">
-        <span class="date">Created at: <%= image.created_at.strftime('%d %b %y') %></span>
-        <span class="date">Updated at: <%= image.updated_at.strftime('%d %b %y') %></span>
+<div class="col">
+  <%= form_for(image) do |f| %>
+      <div class="for_page row" title="<%= image.for_page %>">
+        <i class="material-icons"><%= image.for_page %></i>
       </div>
-    <%end%>
 
-    <%= f.submit 'Save', class: "mdl-button mdl-js-button mdl-button--raised image-save-button"%>
+      <% url = image.present? && image.url ? image.url : 'default-image.png' %>
+      <% image = Image.new unless image.present? %>
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col preview">
+          <%= image_tag url, {class: "#{controller.action_name}-preview-img"} %>
+        </div>
+        <div class="col-3"></div>
+      </div>
 
-<%end%>
+      <div class="form-group row">
+        <label for="image-url" class="col-2 col-form-label">Url</label>
+        <div class="col-12">
+          <%= f.text_field :url, class: 'form-control', id: 'image-url' %>
+        </div>
+      </div>
 
-<script>
-  $(function () {
+      <div class="form-group row">
+        <label for="image-title" class="col-2 col-form-label">Title</label>
+        <div class="col-12">
+          <%= f.text_field :title, class: 'form-control', id: 'image-title' %>
+        </div>
+      </div>
 
-  });
-</script>
+      <div class="form-group row">
+        <label for="image-photographer" class="col-2 col-form-label">Photographer</label>
+        <%= f.select(:photographer_id, Photographer.all.collect {|p| [ p.full_name, p.id ] },
+                     {include_blank: "Select a photographer",
+                      selected: image && image.photographer ? image.photographer.id : nil},
+                     { class: 'image-select form-control col-9', id: 'image-photographer' }) %>
+        <div class="col-2">
+          <span class="input-group">
+            <span class="input-group-btn">
+              <%= link_to 'Manage Photographer', manage_photographers_path, class: 'manage-photographer btn btn-secondary', target: '_blank' %>
+            </span>
+          </span>
+        </div>
+      </div>
+
+
+      <div class="form-group row">
+        <label for="image-title" class="col-2 col-form-label">Description</label>
+        <div class="col-12">
+          <%= f.text_area :description, class: 'form-control', rows: "3", id:"image-description" %>
+        </div>
+      </div>
+
+
+      <% if image.created_at.present? %>
+          <div class="dates row">
+            <div class="date col">Created at: <%= image.created_at.strftime('%d %b %y') %></div>
+            <div class="date col">Updated at: <%= image.updated_at.strftime('%d %b %y') %></div>
+            <div class="button col"><%= f.submit 'Save', class: "image-save-button btn btn-outline-primary btn-lg"%></div>
+          </div>
+      <%end%>
+
+
+
+  <%end%>
+
+
+</div>
