--- a/app/views/images/edit.erb
+++ b/app/views/images/edit.erb
@@ -1,3 +1,4 @@
-<div class="image-form nw-form">
+<div class="image-form">
+  <%= render :partial => "layouts/form_header", :locals => { :title => 'Edit Image' } %>
   <%= render :partial => "form", :locals => { :image => @image } %>
 </div>
