--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,17 @@
 <% image = image_tag("nwkendo_logo_sm.png", :alt => "NW Kendo Logo") %>
 
-<header class="mdl-layout__header">
-  <div class="mdl-layout__header-row">
-    <span class="mdl-layout-title">
-      <%= link_to image, root_path %>
-    </span>
-    <h3>NW Kendo</h3>
+<header class="nw-header">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col header-title">
+       <div class="title-icons">
+         <!--<button type="button" class="btn btn-secondary btn-lg">-->
+           <!--<span class="menu-icon svg-icon show-menu"></span>-->
+         <!--</button>-->
+         <%= link_to image, root_path %>
+       </div>
+      <h3>NW Kendo</h3>
+    </div>
+    <div class="col-2"></div>
   </div>
 </header>
-<div class="mdl-layout__drawer">
-  <span class="mdl-layout-title">Title</span>
-  <nav class="mdl-navigation">
-    <%= link_to 'Link', root_path %>
-    <%= link_to 'Link', root_path %>
-    <%= link_to 'Link', root_path %>
-    <% if current_admin %>
-        <%= link_to 'Manage', manage_path %>
-    <% end %>
-  </nav>
-</div>
