--- a/app/views/photographers/_form.erb
+++ b/app/views/photographers/_form.erb
@@ -1,53 +1,41 @@
-<%= form_for(photographer) do |f| %>
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <%= f.text_field :full_name, class: 'mdl-textfield__input', id: 'photographer-name' %>
-      <label class="mdl-textfield__label" for="photographer-name">Full Name</label>
-    </div>
+<div class="col">
+  <%= form_for(photographer) do |f| %>
 
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <%= f.text_field :contact_email, class: 'mdl-textfield__input', id: 'photographer-email' %>
-      <label class="mdl-textfield__label" for="photographer-email">Email</label>
-    </div>
-
-    <% if photographer.created_at.present? %>
-      <div class="dates">
-        <span class="date">Created at: <%=photographer.created_at.strftime('%d %b %y') %></span>
-        <span class="date">Updated at: <%=photographer.updated_at.strftime('%d %b %y') %></span>
+      <div class="form-group row">
+        <label for="photographer-name" class="col-2 col-form-label">Full Name</label>
+        <div class="col-12">
+          <%= f.text_field :full_name, class: 'form-control', id: 'photographer-name' %>
+        </div>
       </div>
-    <% end%>
 
-    <%= f.submit 'Save', class: "mdl-button mdl-js-button mdl-button--raised image-save-button"%>
+      <div class="form-group row">
+        <label for="photographer-email" class="col-2 col-form-label">Contact email</label>
+        <div class="col-12">
+          <%= f.text_field :contact_email, class: 'form-control', id: 'photographer-email' %>
+        </div>
+      </div>
 
-   <%if photographer.images.present?%>
-      <h4><%=pluralize photographer.images.length, 'Image'%></h4>
-      <p>Click to see details</p>
-      <div id="nwCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-inner">
+      <% if photographer.created_at.present? %>
+          <div class="dates row">
+            <div class="date col">Created at: <%= photographer.created_at.strftime('%d %b %y') %></div>
+            <div class="date col">Updated at: <%= photographer.updated_at.strftime('%d %b %y') %></div>
+            <div class="button col"><%= f.submit 'Save', class: "photographer-save-button btn btn-outline-primary btn-lg"%></div>
+          </div>
+      <%end%>
+
+
+      <%if photographer.images.present?%>
+          <h4><%=pluralize photographer.images.length, 'Image'%></h4>
+          <p>Click to see details</p>
+          <div class="row">
             <% photographer.images.each_with_index do |image, index| %>
-                <% klasses = 'carousel-item ' %>
-                <% klasses += 'active' if index == 0 %>
+                <% klasses = 'col-4 ' %>
                 <div class="<%=klasses%>">
-                  <%= link_to image_tag(image.url, class: 'front-image d-block w-100', alt: image.title, title: image.description), edit_image_path(image) %>
+                  <%= link_to image_tag(image.url, alt: image.title, title: image.description), edit_image_path(image) %>
                 </div>
             <%end%>
           </div>
-        </div>
-        <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#landingPageCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    <%end%>
+      <%end%>
 
-<%end%>
-
-<script>
-  $(function () {
-
-  });
-</script>
+  <%end%>
+</div>
