--- a/app/assets/stylesheets/svg_classes.scss
+++ b/app/assets/stylesheets/svg_classes.scss
@@ -11,6 +11,28 @@
   width: 41px;
   background: url(svg/location.svg) no-repeat;
 }
+.location-white-icon {
+  width: 41px;
+  background: url(svg/location_white.svg) no-repeat;
+}
+.add-people-icon {
+  background: url(svg/add_people.svg) no-repeat;
+}
+.add-people-white-icon {
+  background: url(svg/add_people_white.svg) no-repeat;
+}
+.date-range-icon {
+  background: url(svg/date_range.svg) no-repeat;
+}
+.date-range-white-icon {
+  background: url(svg/date_range_white.svg) no-repeat;
+}
+.resources-icon {
+  background: url(svg/date_range.svg) no-repeat;
+}
+.email-icon {
+  background: url(svg/email.svg) no-repeat;
+}
 .menu-icon {
   background: url(svg/menu.svg) no-repeat;
 }
