--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,31 +1,5 @@
-<% if @images.present? && @images.length == 1 %>
-    <% image = @images.first %>
-    <%= image_tag image.url, class: 'front-image', alt:@image.title, title: image.description %>
-<% elsif @images.present? %>
-    <div id="nwCarousel" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-inner">
-          <% @images.each_with_index do |image, index| %>
-              <% klasses = 'carousel-item ' %>
-              <% klasses += 'active' if index == 0 %>
-              <div class="<%=klasses%>">
-                <%= image_tag image.url, class: 'front-image d-block w-100', alt: image.title, title: image.description %>
-              </div>
-          <%end%>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#landingPageCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-<%else%>
-    No images added yet
-<%end%>
+<%= render :partial => "layouts/image_carousel", :locals => { images: @images, with_nav: false } %>
+
 <%if current_admin%>
     <div class="admin-panel">
       <%= link_to 'Manage Images', manage_images_path(:home_landing), class: 'mdl-button' %>
@@ -33,56 +7,29 @@
 <%end%>
 
 <div class="short-info">
-  <div class="mdl-grid short-info-row-1">
-    <div class="mdl-cell mdl-cell--4-col info-block">
-      <%= link_to manage_path do %>
-        <div class="info-box">
-          <div class="dojo-icon info-icon"></div>
-          <p>Dojo info</p>
-        </div>
-      <% end %>
-    </div>
-    <div class="mdl-cell mdl-cell--4-col info-block">
-      <%= link_to manage_path do %>
-          <div class="info-box">
-            <div class="dojo-icon info-icon"></div>
-            <p>Dojo info</p>
+  <% [:row_1, :row_2].each do |row| %>
+    <% row_klasses =  'row' %>
+    <% row_klasses += row == :row_1 ? ' info-row-1' : ' info-row-2' %>
+    <div class="<%= row_klasses %>">
+      <% @links[row].each do |link| %>
+          <div class="col-4 info-block">
+            <%= link_to link[:path] do %>
+                <div class="info-box">
+                  <% icon_klass = link[:icon] + ' info-icon svg-icon' %>
+                  <div class="<%=icon_klass%>"></div>
+                  <p class="title"><%= link[:title] %></p>
+                  <% if link[:info] %>
+                    <% link[:info].each do |info|%>
+                      <p class="info"><%=info%></p>
+                    <%end%>
+                  <%end%>
+                  <% if link[:button] %>
+                    <%= link_to link[:button][:text], '#' %>
+                  <%end%>
+                </div>
+            <% end %>
           </div>
-      <% end %>
+      <%end%>
     </div>
-    <div class="mdl-cell mdl-cell--4-col info-block">
-      <%= link_to manage_path do %>
-          <div class="info-box">
-            <div class="dojo-icon info-icon"></div>
-            <p>Dojo info</p>
-          </div>
-      <% end %>
-    </div>
-  </div>
-  <div class="mdl-grid short-info-row-2">
-    <div class="mdl-cell mdl-cell--4-col info-block">
-      <%= link_to manage_path do %>
-          <div class="info-box">
-            <div class="dojo-icon info-icon"></div>
-            <p>Dojo info</p>
-          </div>
-      <% end %>
-    </div>
-    <div class="mdl-cell mdl-cell--4-col info-block">
-      <%= link_to manage_path do %>
-          <div class="info-box">
-            <div class="location-icon info-icon"></div>
-            <p>Find us at</p>
-          </div>
-      <% end %>
-    </div>
-    <div class="mdl-cell mdl-cell--4-col info-block">
-      <%= link_to manage_path do %>
-          <div class="info-box">
-            <div class="dojo-icon info-icon"></div>
-            <p>Dojo info</p>
-          </div>
-      <% end %>
-    </div>
-  </div>
+  <%end%>
 </div>
