--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
       <div class="col-2">
         <%= render partial: "/layouts/navigation" %>
       </div>
-      <div class="col-8">
+      <div class="col-8 content-body">
         <%= yield %>
       </div>
       <div class="col-2"></div>
