--- a/app/assets/stylesheets/svg_classes.scss
+++ b/app/assets/stylesheets/svg_classes.scss
@@ -28,7 +28,7 @@
   background: url(svg/date_range_white.svg) no-repeat;
 }
 .resources-icon {
-  background: url(svg/date_range.svg) no-repeat;
+  background: url(svg/resources.svg) no-repeat;
 }
 .email-icon {
   background: url(svg/email.svg) no-repeat;
