--- a/app/views/home/manage.erb
+++ b/app/views/home/manage.erb
@@ -41,6 +41,14 @@
             <i class="material-icons"><%=@all_sym%></i>
             <%= link_to 'All Questions and Ansers', manage_questions_path %>
           </li>
+          <li class="list-group-item">
+            <i class="material-icons">link</i>
+            <%= link_to 'All Resources', manage_resources_path %>
+          </li>
+          <li class="list-group-item">
+            <i class="material-icons"><%=@all_sym%></i>
+            <%= link_to 'All Resource Categories', manage_categories_path %>
+          </li>
         </ul>
         <div class="card-block"></div>
       </div>
