--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,9 @@
     <div class="col-1"></div>
     <div class="col header-title">
        <div class="title-icons">
-         <!--<button type="button" class="btn btn-secondary btn-lg">-->
-           <!--<span class="menu-icon svg-icon show-menu"></span>-->
-         <!--</button>-->
+         <!--<%= link_to '', id: 'menu-toggle' do %>-->
+           <!--<i class="material-icons">menu</i>-->
+         <!--<%end%>-->
          <%= link_to image, root_path %>
        </div>
       <h3>NW Kendo</h3>
