--- a/app/assets/stylesheets/category.scss
+++ b/app/assets/stylesheets/category.scss
@@ -1,12 +1,12 @@
 @import "mixin";
 @import "variables";
-.manage-questions {
-  .question-item-row {
+.manage-categories {
+  .category-item-row {
     border-top: 1px $kendo-blue solid;
     &:last-of-type {
       border-bottom: 1px $kendo-blue solid;
     }
-    .question-content {
+    .category-content {
       line-height: 40px;
       &:first-of-type {
         margin-top: 5px;
@@ -32,8 +32,7 @@
     padding: 0;
   }
 }
-
-.question-form {
+.category-form {
   .position, label {
     text-align: left;
   }
